// Copyright 2021 The Engula Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package engula.kernel.v1;

message Version {
  uint64 sequence = 1;
  map<string, bytes> meta = 2;
  repeated string objects = 3;
}

message VersionUpdate {
  uint64 sequence = 1;
  map<string, bytes> add_meta = 2;
  repeated string remove_meta = 3;
  repeated string add_objects = 4;
  repeated string remove_objects = 5;
}
