// Copyright 2022 The Engula Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package objectengine.master.v1;

message ListBucketsRequest { string tenant = 1; }

message ListBucketsResponse { repeated BucketDesc descs = 1; }

message CreateBucketRequest {
  string tenant = 1;
  string bucket = 2;
  BucketOptions options = 3;
}

message CreateBucketResponse { BucketDesc desc = 1; }

message UpdateBucketRequest {
  string tenant = 1;
  string bucket = 2;
  BucketOptions options = 3;
}

message UpdateBucketResponse { BucketDesc desc = 1; }

message DeleteBucketRequest {
  string tenant = 1;
  string bucket = 2;
}

message DeleteBucketResponse {}

message DescribeBucketRequest {
  string tenant = 1;
  string bucket = 2;
}

message DescribeBucketResponse { BucketDesc desc = 1; }

message BucketDesc {
  // The name of this bucket.
  string name = 1;
  // The tenant that this bucket belongs to.
  string tenant = 2;
  BucketOptions options = 3;
  BucketProperties properties = 4;
}

message BucketOptions {}

message BucketProperties {}
